--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-askama = "0.12.1"
+askama = { version = "0.12.1", features = ["with-axum"] }
+askama_axum = "0.4.0"
 axum = "0.7.5"
 axum-server = { version = "0.6.0", features = ["tokio-rustls"] }
+color-eyre = "0.6.3"
 once_cell = "1.19.0"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 sqlx = { version = "0.7.4", features = ["runtime-tokio"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tower = "0.4.13"
+tower-http = { version = "0.5.2", features = ["fs"] }
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
