--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,26 @@ edition = "2021"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = "0.7.5"
-axum-server = { version = "0.6.0", features = ["tokio-rustls"] }
+axum-server = { version = "0.6.0", features = ["tokio-rustls", "tls-rustls"] }
 color-eyre = "0.6.3"
+config = { version = "0.14.0", default-features = false, features = [
+    "toml",
+    "convert-case",
+    "async",
+] }
 once_cell = "1.19.0"
+reqwest = { version = "0.12.4", default-features = false, features = [
+    "http2",
+    "charset",
+    "rustls-tls",
+] }
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
-sqlx = { version = "0.7.4", features = ["runtime-tokio"] }
+sqlx = { version = "0.7.4", features = [
+    "runtime-tokio",
+    "tls-rustls",
+    "sqlite",
+] }
 tokio = { version = "1.37.0", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.5.2", features = ["fs"] }
